[package]
name = "eray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytemuck = "1.13.1"
derive_more = "0.99.17"
gl = "0.14.0"
glfw = "0.51.0"
paste = "1.0.12"
rand = "0.8.5"
thiserror = "1.0.40"

[lib]
path = "src/lib/lib.rs"
