[package]
name = "eray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = "1.13"
derive_more = "0.99"
gl = "0.14"
glfw = "0.51"
paste = "1.0"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
which = "4.4"
float_eq = { version = "1.0", features = ["derive"] }

[lib]
path = "src/lib/lib.rs"
