[package]
name = "eray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = "1.13"
derive_more = "0.99"
dyn-clone = "1.0.11"
gl = "0.14"
glfw = "0.51"
lazy_static = "1.4.0"
map-macro = "0.2.6"
paste = "1.0"
pest = "2.5"
pest_derive = "2.5"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
which = "4.4"
float_eq = { version = "1.0", features = ["derive"] }

[lib]
path = "src/lib/lib.rs"
